Minor fixes to improve mobile visibility

--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@
   }
 
   .img-logo-size {
-    max-height: 85px;
+    width: 85%; 
+    height: auto;
   }
 }
